add hangman content

--- a/templates/hangman.hbs
+++ b/templates/hangman.hbs
@@ -1,2 +1,25 @@
-<div>Hello World! HANGMAN.exe</div>
-<div>TARGET WORD: {{targetWord}}</div>
+<div class="terminal-container">
+    <p>
+sudo apt-get hangman
+- Fetching package metadata from repo: xXSuckItFedsXx
+- Downloading package data
+.....20%...........43%.......66%.......99%............................100%
+successfully installed hangman
+
+sudo hangman.exe
+Program initializing...
+
+888    888        d8888 888b    888  .d8888b.  888b     d888        d8888 888b    888     8888888888 Y88b   d88P 8888888888 
+888    888       d88888 8888b   888 d88P  Y88b 8888b   d8888       d88888 8888b   888     888         Y88b d88P  888        
+888    888      d88P888 88888b  888 888    888 88888b.d88888      d88P888 88888b  888     888          Y88o88P   888        
+8888888888     d88P 888 888Y88b 888 888        888Y88888P888     d88P 888 888Y88b 888     8888888       Y888P    8888888    
+888    888    d88P  888 888 Y88b888 888  88888 888 Y888P 888    d88P  888 888 Y88b888     888           d888b    888        
+888    888   d88P   888 888  Y88888 888    888 888  Y8P  888   d88P   888 888  Y88888     888          d88888b   888        
+888    888  d8888888888 888   Y8888 Y88b  d88P 888   "   888  d8888888888 888   Y8888 d8b 888         d88P Y88b  888        
+888    888 d88P     888 888    Y888  "Y8888P88 888       888 d88P     888 888    Y888 Y8P 8888888888 d88P   Y88b 8888888888
+    </p>
+  <div class="input-wrapper">
+    <span class="prefix">$&gt;</span>
+    <input name="guess" />
+  </div>
+</div>
