--- a/templates/hangman.hbs
+++ b/templates/hangman.hbs
@@ -1,5 +1,5 @@
 <div class="terminal-container">
-    <p>
+    <p class="terminal-output">
 sudo apt-get hangman
 - Fetching package metadata from repo: xXSuckItFedsXx
 - Downloading package data
