--- a/templates/hangman.hbs
+++ b/templates/hangman.hbs
@@ -1,6 +1,5 @@
 <div class="terminal-container">
-    <p class="terminal-output">
-sudo apt-get hangman
+    <p class="terminal-output">sudo apt-get hangman
 - Fetching package metadata from repo: xXSuckItFedsXx
 - Downloading package data
 .....20%...........43%.......66%.......99%............................100%
@@ -16,8 +15,7 @@ Program initializing...
 888    888    d88P  888 888 Y88b888 888  88888 888 Y888P 888    d88P  888 888 Y88b888     888           d888b    888        
 888    888   d88P   888 888  Y88888 888    888 888  Y8P  888   d88P   888 888  Y88888     888          d88888b   888        
 888    888  d8888888888 888   Y8888 Y88b  d88P 888   "   888  d8888888888 888   Y8888 d8b 888         d88P Y88b  888        
-888    888 d88P     888 888    Y888  "Y8888P88 888       888 d88P     888 888    Y888 Y8P 8888888888 d88P   Y88b 8888888888
-    </p>
+888    888 d88P     888 888    Y888  "Y8888P88 888       888 d88P     888 888    Y888 Y8P 8888888888 d88P   Y88b 8888888888</p>
   <div class="input-wrapper">
     <span class="prefix">$&gt;</span>
     <input name="guess" />
