--- a/styles/hangman.css
+++ b/styles/hangman.css
@@ -2,6 +2,7 @@
   background-color: #2d2d2d;
   color: #08bf08;
   padding: 1rem;
+  padding-bottom: 8px;
   border-radius: 8px;
   overflow: hidden;
 }
@@ -14,6 +15,7 @@
 .input-wrapper {
   display: flex;
   align-items: center;
+  padding-top: 8px;
 }
 
 .input-wrapper input {
